just another one o

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,5 +1,5 @@
 <div id="heading">Banking System</div>
 <div class="links">
-    <a href="/" class="nav-links" style="margin:0rem 0rem 0rem 5rem;">Home</a>
+    <a href="/bank" class="nav-links" style="margin:0rem 0rem 0rem 5rem;">Home</a>
     <a href="/bank/viewCustomers" class="nav-links" style="padding:0rem -3rem 0rem 0rem;">Customers</a>
 </div> 
